--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bitflags = { version = "1.3.2" }
 nom = { version = "7.1.1" }
 thiserror = { version = "1.0.35" }
