--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 bitflags = { version = "1.3.2" }
+chrono = { version = "0.4.22" }
 nom = { version = "7.1.1" }
 thiserror = { version = "1.0.35" }
